--- a/src/CSS/style.css
+++ b/src/CSS/style.css
@@ -52,7 +52,7 @@ label {
 .custom-input {
   width: 100%;
   height: 60px;
-  background-color: #F8F4F4 !important;
+  background-color: #f8f4f4 !important;
   border: 1px solid rgba(0, 0, 0, 0.4) !important;
   border-radius: 16px !important;
   padding: 16px;
@@ -105,7 +105,7 @@ label {
 .photo-upload-box {
   width: 500px;
   height: 350px;
-  border: 3px dashed #B0B0B0;
+  border: 3px dashed #b0b0b0;
   border-radius: 15px;
   display: flex;
   justify-content: center;
@@ -118,7 +118,7 @@ label {
 }
 
 .photo-upload-box:hover {
-  border-color: #7AC6D2;
+  border-color: #7ac6d2;
   background-color: #ffffff;
 }
 
@@ -154,7 +154,7 @@ label {
 }
 
 .upload-kirim-btn {
-  background-color: #7AC6D2 !important;
+  background-color: #7ac6d2 !important;
   color: #000 !important;
   border: none !important;
   width: 120px;
@@ -212,24 +212,32 @@ label {
 */
 
 .photo-upload-box {
-    width: 90%;
-    max-width: 400px;
-    height: 250px;
-  }
+  width: 90%;
+  max-width: 400px;
+  height: 250px;
+}
 
-  .upload-form-container .form-title {
-    font-size: 30px;
-    margin-bottom: 30px;
-  } 
-    /* .form-title {
+.upload-form-container .form-title {
+  font-size: 30px;
+  margin-bottom: 30px;
+}
+/* .form-title {
     font-size: 28px;
     margin-bottom: 30px;
     text-align: center;
   } */
 
-  .submit-btn {
-    background-color: #7AC6D2 !important;
-    width: 120px;
-    height: 45px;
-    border: none !important;
-  }
+.submit-btn {
+  background-color: #7ac6d2 !important;
+  width: 120px;
+  height: 45px;
+  border: none !important;
+}
+
+.submit-btn-kirim {
+  background-color: #7ac6d2 !important;
+  color: #000000 !important;
+  width: 120px;
+  height: 45px;
+  border: none !important;
+}
