--- a/src/CSS/foodlist.css
+++ b/src/CSS/foodlist.css
@@ -21,15 +21,15 @@
 }
 
 .search-button {
-  background-color: #007bff;
-  border-color: #007bff;
+  background-color: #000000;
+  border-color: #000000;
   border-radius: 0 0.5rem 0.5rem 0 !important;
   padding: 0.75rem 1rem;
 }
 
 .search-button:hover {
-  background-color: #0056b3;
-  border-color: #0056b3;
+  background-color: #0f1419;
+  border-color: #0f1419;
 }
 
 .food-list-card {
