--- a/src/CSS/dashboard.css
+++ b/src/CSS/dashboard.css
@@ -35,7 +35,7 @@ body {
   left: 0;
   right: 0;
   bottom: 0;
-  background-color: rgba(0, 0, 0, 0.5);
+  /* background-color: rgba(0, 0, 0, 0.5); */
 }
 .card {
   border-radius: 10px;
