--- a/src/CSS/style.css
+++ b/src/CSS/style.css
@@ -20,6 +20,21 @@
   flex-grow: 1;
 }
 
+.form-container-flex {
+  display: flex;
+  gap: 40px;
+  justify-content: center;
+  align-items: flex-start;
+  flex-direction: row; /* Default untuk desktop */
+}
+
+.image-section {
+  flex-shrink: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .form-title {
   font-weight: 800;
   font-size: 32px;
@@ -169,48 +184,6 @@ label {
   border: none !important;
 }
 
-/* 
-
-@media (max-width: 768px) {
-  .upload-buttons-container {
-    flex-direction: column;
-    gap: 10px;
-  }
-  .upload-kirim-btn, .upload-batal-btn {
-    width: 100%;
-  }
-
-  .main-container {
-    padding: 20px;
-    gap: 40px;
-    flex-direction: column;
-    align-items: center;
-  }
-
-  .form-container {
-    flex-basis: 100%;
-    width: 100%;
-  }
-
-
-
-  /* 
-}
-
-@media (max-width: 480px) {
-  .chef-img-container {
-    height: 250px;
-  }
-  .photo-upload-box {
-    height: 200px;
-  }
-  .placeholder-icon svg {
-    font-size: 3rem;
-  }
-}
-
-*/
-
 .photo-upload-box {
   width: 90%;
   max-width: 400px;
@@ -221,11 +194,6 @@ label {
   font-size: 30px;
   margin-bottom: 30px;
 }
-/* .form-title {
-    font-size: 28px;
-    margin-bottom: 30px;
-    text-align: center;
-  } */
 
 .submit-btn {
   background-color: #7ac6d2 !important;
@@ -240,4 +208,59 @@ label {
   width: 120px;
   height: 45px;
   border: none !important;
+}
+
+
+@media (max-width: 768px) {
+  .form-container-flex {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .upload-buttons-container {
+    flex-direction: column;
+    gap: 10px;
+  }
+  .upload-kirim-btn, .upload-batal-btn {
+    width: 100%;
+  }
+
+  .photo-box {
+    width: 50%;
+    max-width: 300px;
+    height: 50%;
+    aspect-ratio: 1 / 1;
+    margin-bottom: 20px;
+  }
+
+  .photo-preview {
+    width: 100%;
+    height: auto;
+    object-fit: cover;
+  }
+
+  .main-container {
+    padding: 20px;
+    gap: 40px;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .form-container {
+    flex-basis: 100%;
+    width: 100%;
+    padding: 0 20px;
+  }
+}
+
+@media (max-width: 480px) {
+  .chef-img-container {
+    height: 250px;
+  }
+  .photo-upload-box {
+    height: 200px;
+  }
+  .placeholder-icon svg {
+    font-size: 3rem;
+  }
 }
