update tampilan data diri

--- a/src/CSS/style.css
+++ b/src/CSS/style.css
@@ -110,6 +110,24 @@ label {
   text-align: center;
 }
 
+.chef-img-container {
+  width: 350px;
+  height: auto;
+  overflow: hidden;
+  margin: 50px auto 10px auto;
+  border: 2px solid #ccc;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.chef-img-container img {
+  width: 100%;
+  height: 50%;
+  object-fit: contain;
+}
+
 .upload-form-container .form-title {
   text-align: center;
   margin-bottom: 50px;
@@ -255,7 +273,7 @@ label {
 
 @media (max-width: 480px) {
   .chef-img-container {
-    height: 250px;
+    width: 350px;
   }
   .photo-upload-box {
     height: 200px;
