--- a/src/CSS/style.css
+++ b/src/CSS/style.css
@@ -25,7 +25,7 @@
   gap: 40px;
   justify-content: center;
   align-items: flex-start;
-  flex-direction: row; /* Default untuk desktop */
+  flex-direction: row;
 }
 
 .image-section {
